# simplefab_files

./: .gitignore  README.md  pyproject.toml  requirements.txt
output_data_1p/: comparison_report.html  expert_data.npz  final_event_log.csv
output_data_1p/analysis/: analysis_report.html
scripts/: analyze_cold_start.py  analyze_trained_agent.py  debug_env_reward_breakdown.py  debug_eval.py  debug_reward_breakdown.py  dump_cost_evolution.py  evaluate_agent.py  generate_capacity_chart.py  generate_infographic.py  report_template.html  run_sim.py  train_ppo.py  verify_config_antigravity.py  verify_new_config.py  visualize_inventory.py
scripts_1p/: analyze_trained_agent.py  capacity_analysis.py  compare_demand.py  debug_inventory_bug.py  generate_dashboards_compare.py  generate_expert_data.py  pretrain_bc.py  run_sim.py  train_ppo.py  visualize_dashboard.py  visualize_gantt_premium.py  visualize_gantt_premium2.py  visualize_system.py
simplefab/: __init__.py  config.py  env.py  eval.py  gantt.py  sim.py
simplefab_1p/: __init__.py  config.py  env.py  eval.py  gantt.py  sim.py
tb_fab_1p/PPO_1p_weekly_2688_1/: events.out.tfevents.1775978427.AI_PC.53048.0
tb_fab_1p/PPO_1p_weekly_2688_10/: events.out.tfevents.1776011284.AI_PC.13900.0
tb_fab_1p/PPO_1p_weekly_2688_11/: events.out.tfevents.1776028772.AI_PC.62384.0
tb_fab_1p/PPO_1p_weekly_2688_12/: events.out.tfevents.1776029354.AI_PC.69432.0
tb_fab_1p/PPO_1p_weekly_2688_13/: events.out.tfevents.1776029775.AI_PC.57800.0
tb_fab_1p/PPO_1p_weekly_2688_2/: events.out.tfevents.1775981307.AI_PC.54400.0
(+7 files in other folders)
