[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplefab"
version = "0.1.0"
description = "SimpleFab simulator + Gym env + PPO training"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplefab*"]
